fixed problems with video rate.